--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice5-googlemapsintegration",
+  "name": "ejercicio2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
